# governed-analytics-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analytics/eval/: eval_questions.jsonl  run_eval.py
analytics/reports/: eval_report.md
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: dim_date.sql  dim_products.sql  dim_users.sql  fct_order_items.sql  fct_orders.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_order_items.sql  stg_orders.sql  (+3 more)
dbt/tests/: placeholder_test.sql
docs/: architecture.md  data_dictionary.md  evaluation.md  runbook.md
infra/sql/: 00_schemas.sql  01_raw_tables.sql  02_logs_table.sql
pipelines/seed/: seed_data.py
semantic_layer/: README.md  semantic_model.yml
src/api/: main.py
src/copilot/: cache.py  chart_generator.py  explainer.py  llm_client.py  planner.py  service.py  spec.py  sql_generator.py  suggestions.py
src/core/: config.py  logging.py  utils.py
src/db/: connection.py  executor.py  query_log.py
src/governance/: cost_guard.py  rbac.py  semantic_loader.py  sql_safety.py  validator.py
src/ui/: streamlit_app.py
tests/integration/: test_db_executor.py  test_placeholder.py  test_query_log.py  test_service_e2e.py
tests/unit/: test_api.py  test_cache.py  test_chart_generator.py  test_cost_guard.py  test_explainer.py  test_llm_client.py  test_planner.py  test_rbac.py  test_semantic_loader.py  test_service.py  test_spec.py  test_sql_generator.py  test_sql_safety.py  test_suggestions.py  test_validator.py
(+4 files in other folders)
